# crusty-rustacean-blog

./: .gitignore  .ignore  README.md  astro.config.mjs  bun.lockb  package-lock.json  package.json  tailwind.config.cjs
public/: robots.txt
server/: Cargo.toml  Shuttle.toml
server/src/: main.rs
src/components/: BlogPost.astro  Footer.astro  Header.astro  NavBar.astro  Search.jsx  SearchBar.astro
src/content/: config.ts
src/content/blog/2022/: 2022_04_05_let_the_journey_begin.md  2022_04_09_constants.md  2022_04_12_pouring_the_footings.md  2022_04_14_pouring_the_footings_single.md  2022_04_18_pouring_the_footings_compound.md  2022_04_22_lets_get_functional.md  2022_04_23_pillars.md  2022_04_27_decisions_decisions.md  2022_05_01_controlling_the_flow.md  2022_05_06_building_something_saying_hello.md  2022_05_11_bigger_building_blocks_intro_to_structs.md  2022_05_21_bigger_building_blocks_intro_to_enumerations.md  2022_06_11_bigger_building_blocks_structs_reloaded.md  2022_07_01_method_to_the_madness.md  2022_07_14_the_memory_doesnt_remain.md  2022_08_13_option_is_it_something_or_nothing.md  2022_09_30_matchy_matchy.md  2022_11_03_v1.65_released.md  2022_11_03_v1.66_released.md  2022_11_14_the_dumbest_program_ever.md  2022_11_18_deployment_is_a_dirty_word.md
src/content/blog/2023/: 2023_01_26_v1.67_released.md  2023_03_23_v1.68.1_released.md  2023_03_23_v1.68.2_released.md  (+21 more)
src/layouts/: SiteLayout.astro
src/pages/: index.astro  rss.xml.js
src/pages/categories/: [category].astro  index.astro
src/pages/posts/: [...slug].astro
src/pages/tags/: [tag].astro  index.astro
