[package]
name = "crusty-rustacean-blog"
version = "2023.11.26"
edition = "2021"
description = "Crusty Rustacean Development Blog"
readme = "README.md"
authors = [ "Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>" ]
repository = "https://github.com/sentinel1909/crusty-rustacean-blog"
license = "MIT"
keywords = ["astro, axum, shuttle"]
publish = false

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.34.0"
shuttle-runtime = { version = "0.34.0" }
tokio = { version = "1.34.0" }
tower-http = { version = "0.4.4", features = [ "fs" ] }
