[package]
name = "crusty-rustacean-blog"
version = "2023.12.12"
edition = "2021"
description = "Crusty Rustacean Blog"
readme = "README.md"
authors = [ "Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>" ]
repository = "https://github.com/sentinel1909/crusty-rustacean-blog"
license = "MIT"
keywords = ["astro, rocket, shuttle"]
publish = false

[dependencies]
rocket = "0.5.1"
shuttle-rocket = "0.48.0"
shuttle-runtime = { version = "0.48.0" }

